Final adjustments-Could not fix alignment

--- a/style.css
+++ b/style.css
@@ -12,5 +12,5 @@ div.maindiv{background-color:white;
 color:black;
 width:300px;
 padding:20px;
-border-radius: 25px 25px 25px 25px;
-text-align:left;}
+border-radius:25px;
+}
